fixed overlap

--- a/src/components/MsgBox/MsgBox.module.scss
+++ b/src/components/MsgBox/MsgBox.module.scss
@@ -1,9 +1,8 @@
 @import '../../colors';
 
 .MsgBox {
-  padding-top: 5em;
   display: flex;
-  height: 50px;
+  height: 100px;
   justify-content: center;
 }
 
